fucking clang is a shitty compiler

--- a/Assignment 1/makefile
+++ b/Assignment 1/makefile
@@ -1,23 +1,23 @@
 # Linux (default)
 CC=g++
-TARGET = assignment
-LDFLAGS = -lGL -lGLU -lglut
-CFLAGS = -Wall
+TARGET=assignment
+LDFLAGS=-lGL -lGLU -lglut
+CFLAGS=-Wall
 
 # Windows (cygwin)
 ifeq "$(OS)" "Windows_NT"
-TARGET = assignment.exe
-CFLAGS += -D_WIN32
+TARGET=assignment.exe
+CFLAGS+=-D_WIN32
 endif
 
 # OS X
 ifeq ($(shell uname -s),Darwin)
-LDFLAGS = -framework Carbon -framework OpenGL -framework GLUT
-CFLAGS += -D__APPLE__
+LDFLAGS=-framework Carbon -framework OpenGL -framework GLUT
+CFLAGS+=-D __APPLE__
 endif
 
 all:
-	$(CC) $(CFLAGS) *.cpp *.h -o $(TARGET) $(LDFLAGS)
+	$(CC) $(CFLAGS) *.cpp -o $(TARGET) $(LDFLAGS)
 
 clean:
 	rm assignment *.exe
