--- a/workspace/workspace.vcxproj
+++ b/workspace/workspace.vcxproj
@@ -86,6 +86,8 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="tute.h" />
     <ClInclude Include="tute1.h" />
+    <ClInclude Include="tute2.h" />
+    <ClInclude Include="vectors.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="glutBegin.cpp" />
@@ -96,6 +98,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="tute1.cpp" />
+    <ClCompile Include="tute2.cpp" />
+    <ClCompile Include="vectors.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
