--- a/workspace/workspace.vcxproj
+++ b/workspace/workspace.vcxproj
@@ -87,6 +87,7 @@
     <ClInclude Include="tute.h" />
     <ClInclude Include="tute1.h" />
     <ClInclude Include="tute2.h" />
+    <ClInclude Include="tute3.h" />
     <ClInclude Include="vectors.h" />
   </ItemGroup>
   <ItemGroup>
@@ -99,6 +100,7 @@
     </ClCompile>
     <ClCompile Include="tute1.cpp" />
     <ClCompile Include="tute2.cpp" />
+    <ClCompile Include="tute3.cpp" />
     <ClCompile Include="vectors.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
