--- a/workspace/workspace.vcxproj.filters
+++ b/workspace/workspace.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="vectors.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tute3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="vectors.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tute3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
