--- a/src/solution.vcxproj.filters
+++ b/src/solution.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Mesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="transform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Scene.cpp">
@@ -101,5 +104,10 @@
     <ClCompile Include="Mesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="car.mat">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
