--- a/src/solution.vcxproj
+++ b/src/solution.vcxproj
@@ -11,36 +11,40 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Colour.h" />
-    <ClInclude Include="Engine.h" />
-    <ClInclude Include="Keyboard.h" />
-    <ClInclude Include="KGConstants.h" />
-    <ClInclude Include="Material.h" />
-    <ClInclude Include="Mesh.h" />
-    <ClInclude Include="Misc.h" />
-    <ClInclude Include="Mouse.h" />
-    <ClInclude Include="Object.h" />
-    <ClInclude Include="ObjectList.h" />
-    <ClInclude Include="ObjectProperties.h" />
-    <ClInclude Include="PlatformInclude.h" />
-    <ClInclude Include="Scene.h" />
-    <ClInclude Include="Vectors.h" />
+    <ClInclude Include="colour.h" />
+    <ClInclude Include="engine.h" />
+    <ClInclude Include="keyboard.h" />
+    <ClInclude Include="kgConstants.h" />
+    <ClInclude Include="material.h" />
+    <ClInclude Include="mesh.h" />
+    <ClInclude Include="misc.h" />
+    <ClInclude Include="mouse.h" />
+    <ClInclude Include="object.h" />
+    <ClInclude Include="objectList.h" />
+    <ClInclude Include="objectProperties.h" />
+    <ClInclude Include="platformInclude.h" />
+    <ClInclude Include="scene.h" />
+    <ClInclude Include="transform.h" />
+    <ClInclude Include="vectors.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Colour.cpp" />
-    <ClCompile Include="Engine.cpp" />
-    <ClCompile Include="Keyboard.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Material.cpp" />
-    <ClCompile Include="Mesh.cpp" />
-    <ClCompile Include="Misc.cpp" />
-    <ClCompile Include="Mouse.cpp" />
-    <ClCompile Include="Object.cpp" />
-    <ClCompile Include="ObjectList.cpp" />
-    <ClCompile Include="ObjectProperties.cpp" />
-    <ClCompile Include="PlatformInclude.cpp" />
-    <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="Vectors.cpp" />
+    <ClCompile Include="colour.cpp" />
+    <ClCompile Include="engine.cpp" />
+    <ClCompile Include="keyboard.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="material.cpp" />
+    <ClCompile Include="mesh.cpp" />
+    <ClCompile Include="misc.cpp" />
+    <ClCompile Include="mouse.cpp" />
+    <ClCompile Include="object.cpp" />
+    <ClCompile Include="objectList.cpp" />
+    <ClCompile Include="objectProperties.cpp" />
+    <ClCompile Include="platformInclude.cpp" />
+    <ClCompile Include="scene.cpp" />
+    <ClCompile Include="vectors.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="car.mat" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7175137C-2BF7-4552-AFD2-45DA474B9A67}</ProjectGuid>
